--- a/Api/Server/Pages/Features/Components/Index.cshtml
+++ b/Api/Server/Pages/Features/Components/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Server.Infrastructure
-@using oc.TSB.Infrastructure.Features.Components.ViewModels
+@using oc.TSB.Infrastructure.Features.CamundaProcesses.Components.ViewModels
 @model Server.Pages.Features.Components.IndexModel
 @{
 	var pageTitle =
