--- a/Api/Server/Pages/Features/Processes/Index.cshtml
+++ b/Api/Server/Pages/Features/Processes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Server.Infrastructure
-@using oc.TSB.Infrastructure.Features.Processes.ViewModels
+@using oc.TSB.Infrastructure.Features.CamundaProcesses.Processes.ViewModels
 @model Server.Pages.Features.Processes.IndexModel
 
 @{
