--- a/Api/Server/Pages/Features/UserTasks/Index.cshtml
+++ b/Api/Server/Pages/Features/UserTasks/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Server.Infrastructure
-@using oc.TSB.Infrastructure.Features.UserTaskes.ViewModels
+@using oc.TSB.Infrastructure.Features.CamundaProcesses.UserTaskes.ViewModels
 @model Server.Pages.Features.UserTasks.IndexModel
 @{
 	var pageTitle =
